exports[`dedent can be used as a function 1`] = `"A test argument."`;

exports[`dedent escapes backticks 1`] = `"\`"`;

exports[`dedent single line input works with single line and closing backtick on newline 1`] = `"A single line of input."`;

exports[`dedent single line input works with single line and inline closing backtick 1`] = `"A single line of input."`;

exports[`dedent single line input works with single line input 1`] = `"A single line of input."`;

exports[`dedent works with blank first line 1`] = `
"Some text that I might want to indent:
  * reasons
  * fun
That\'s all."
`;

exports[`dedent works with blank last line 1`] = `
"Some text that I might want to indent:
  * reasons
  * fun
That\'s all."
`;

exports[`dedent works with interpolation 1`] = `
"first line
second
third"
`;

exports[`dedent works with multiple blank first lines 1`] = `
"
first
second
third"
`;

exports[`dedent works with multiple blank last lines 1`] = `
"first
second
third
"
`;

exports[`dedent works with removing same number of spaces 1`] = `
"first
   second
      third"
`;

exports[`dedent works with suppressed newlines 1`] = `
"first second
third"
`;

exports[`dedent works without interpolation 1`] = `
"first
second
third"
`;
